--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -606,7 +606,7 @@ p {
   justify-content: center;
   margin-top: 30px;
   margin-left: 800px;
-  border: 1px solid #111;
+  border: 1px solid #11111138;
   border-radius: 8px;
 }
 
