--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,8 +420,8 @@ p {
   flex-direction: column;
   /* border-radius: 1.5rem; */
   overflow-x: hidden;
-  background-color: #fff;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.07);
+  background-color: #eee;
+  /* box-shadow: 0 10px 40px rgba(0, 0, 0, 0.07); */
   max-width: 100%;
   /* margin: 3rem auto; */
   height: 700px;
@@ -448,7 +448,7 @@ p {
 .testimonial-content {
   flex: 2;
   padding: 3rem 2rem;
-  background-color: #fff;
+  background-color: #eee;
   display: flex;
   flex-direction: column;
   justify-content: center;
