--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,7 +455,7 @@ p {
 }
 
 .subtitle {
-  color: #1e40af;
+  color: #7b0f1d;
   font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
