--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,6 +5,11 @@ body {
   box-sizing: border-box;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 .about-section {
   position: relative;
